initial Home Page layout

--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -1,1 +1,19 @@
-h1 Test
+div class="site-wrapper"
+  div class="site-wrapper-inner"
+    div class="cover-container"
+      div class="masthead clearfix"
+        div class="inner"
+          h3 class="masthead-brand" LastFMApp
+          nav
+            ul class="nav masthead-nav"
+              li class="active"
+                a href="#" Home
+              li
+                a href="#" Top Artists
+
+      div class="inner cover"
+        h1 class="cover-heading" Are you bored?
+        p class="lead" Find me the top artists by country
+        p class="lead"
+          input type="text" class="form-control" placeholder="Text input"
+
