--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -7,9 +7,9 @@ div class="site-wrapper"
           nav
             ul class="nav masthead-nav"
               li class="active"
-                a href="#" Home
+                a href=root_url Home
               li
-                a href="#" Top Artists
+                a href=artists_path(country: 'United States', page: 1, limit:5) Top Artists
 
       div class="inner cover"
         h1 class="cover-heading" Are you bored?
