--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,4 +13,8 @@
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
-@import "cover";
+
+body {
+  min-height: 2000px;
+  padding-top: 70px;
+}
