--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -1,19 +1,5 @@
-div class="site-wrapper"
-  div class="site-wrapper-inner"
-    div class="cover-container"
-      div class="masthead clearfix"
-        div class="inner"
-          h3 class="masthead-brand" LastFMApp
-          nav
-            ul class="nav masthead-nav"
-              li class="active"
-                a href=root_url Home
-              li
-                a href=artists_path(country: 'United States', page: 1, limit:5) Top Artists
-
-      div class="inner cover"
-        h1 class="cover-heading" Are you bored?
-        p class="lead" Find me the top artists by country
-        p class="lead"
-          input type="text" class="form-control" placeholder="Text input"
-
+div class="jumbotron"
+  h1 class="cover-heading" Are you bored?
+  p class="lead" Find me the top artists by country
+  p class="lead"
+  input type="text" class="form-control" placeholder="Text input"
