--- a/app/views/artists/tracks.html.slim
+++ b/app/views/artists/tracks.html.slim
@@ -1,19 +1,11 @@
 div class="jumbotron"
   h2 = "Top Tracks by #{params[:name]}"
   div class="row"
-    table class="table table-hover table-bordered"
-      thead
-        tr
-          th Rank #
-          th Track Logo
-          th Track Name
-      tbody
-        - @tracks.each do |track|
-          tr
-            th = track.try(:[], "@attr").try(:[], "rank")
-            th
-              a href="/" target="_blank"
-                img class="img-circle" src=track["image"].select{|image| image['size']=='medium'}.first["#text"]
-            th = track["name"]
+    - @tracks.each do |track|
+        div class="col-xs-6 col-md-2"
+          a class="thumbnail" href=track.url target="_blank"
+            img src=track.image_url('large')
+          div class="caption"
+            h3 ="#{track.rank}. #{track.name}"
   div class="row"
     = paginate @paginatable_array
