--- a/app/views/artists/show.html.slim
+++ b/app/views/artists/show.html.slim
@@ -1,22 +1,25 @@
 div class="jumbotron"
-  h1 ="Top Artists in #{params[:country]}"
-
-  p
+  h1
+    ="Top Artists in "
     select class="form-control chosen-select" aria-describedby="sizing-addon1" data-placeholder="Select country..."
       option
-      - ISO3166::Country.all.map(&:name).each do |name|
-        - if params[:country] == name
-          option selected="selected" = name
-        - else
-          option = name
+        - ISO3166::Country.all.map(&:name).each do |name|
+          - if params[:country] == name
+            option selected="selected" = name
+          - else
+            option = name
+  hr
 
   div class="row"
-    - @artists.each do |artist|
-        div class="col-xs-6 col-md-2"
-          a class="thumbnail" href=artist_tracks_path(name: artist.name, mbid: artist.mbid) target="_blank"
-            img src=artist.image_url('large')
-          div class="caption"
-            h3 =artist.name
+    - if @artists.blank?
+      h2 Unable to retrieve data from Last.fm
+    - else
+      - @artists.each do |artist|
+          div class="col-xs-6 col-md-2"
+            a class="thumbnail" href=artist_tracks_path(name: artist.name, mbid: artist.mbid) target="_blank"
+              img src=artist.image_url('large')
+            div class="caption"
+              h3 =artist.name
 
   div class="row"
     = paginate @paginatable_array
