--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -1,11 +1,7 @@
 div class="jumbotron"
   h1 class="cover-heading" Looking for your favorite artists?
-  p class="lead" Find me the top artists by country
-  p class="lead"
-  form class="form-inline"
-    div class="form-group"
-      div class="input-group input-group-large"
-        select class="form-control chosen-select" aria-describedby="sizing-addon1" data-placeholder="Select country..."
-          option
-          - ISO3166::Country.all.map(&:name).each do |name|
-            option =name
+  p class="lead" Find your top artists by country
+  select class="chosen-select" aria-describedby="sizing-addon1" data-placeholder="Enter country..."
+    option
+    - ISO3166::Country.all.map(&:name).each do |name|
+      option =name
